--- a/Projet Web Commerce/Views/MainMenu/CatalogueVendeur.cshtml
+++ b/Projet Web Commerce/Views/MainMenu/CatalogueVendeur.cshtml
@@ -207,7 +207,7 @@
                                         decimal average = _context.PPEvaluations.Where(e => e.NoProduit == item.NoProduit).Average(a => a.Cote);
                                          rating = (float)Math.Round(average, 2);
 
-                                        if (int.TryParse(rating.ToString(), out int test))
+                                        if (int.TryParse(rating.ToString(), out int valeur))
                                         {
                                             rating = (float)Math.Round(rating, 0);
                                         }
