--- a/Projet Web Commerce/Views/PPProduits/Index.cshtml
+++ b/Projet Web Commerce/Views/PPProduits/Index.cshtml
@@ -116,12 +116,6 @@
                                 }
                             }
                         </p>
-                        <a asp-controller="Evaluations"
-                           asp-route-id="@item.NoProduit"
-                           asp-action="Index"
-                           class="btn btn-secondary mt-auto" style="background-color:#808080; color: #FFFFFF; margin-bottom:10px; margin-right:10px">
-                            Évaluations
-                        </a>
                         @if (_context.PPEvaluations.Where(e=>e.NoProduit == item.NoProduit).ToList().Count > 0)
                         {
                             <b>@System.Math.Round(_context.PPEvaluations.Where(e => e.NoProduit == item.NoProduit).Average(a => a.Cote), 2) étoiles!</b>
@@ -130,7 +124,7 @@
                         {
                             <b>Aucune évaluations!</b>
                         }
-                        <div>
+                        <div style="margin-top:10px">
                             <a class="btn btn-primary" asp-action="Edit" asp-route-id="@item.NoProduit">Modifier</a>
                             <a> | </a>
                             <a class="btn btn-success" asp-action="Details" asp-route-id="@item.NoProduit">Details</a>
