--- a/Projet Web Commerce/Views/Messagerie/Supprimes.cshtml
+++ b/Projet Web Commerce/Views/Messagerie/Supprimes.cshtml
@@ -23,6 +23,51 @@
         background-color: rgb(236, 235, 243);
         cursor: pointer;
     }
+
+    .menu-container {
+        display: block;
+        justify-content: space-between;
+        align-items: center;
+        padding-left: 30%;
+    }
+
+    .menu-btn {
+        border: none;
+        cursor: pointer;
+        text-decoration: none;
+        color: black;
+    }
+
+        .menu-btn:after {
+            content: '\2807';
+            font-size: 110%;
+        }
+
+    .menu-list {
+        list-style-type: none;
+        padding: 0;
+        margin: 0;
+        display: none;
+        position: absolute;
+        background-color: #444;
+        border-radius: 5px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    }
+
+        .menu-list li {
+            padding: 10px;
+        }
+
+            .menu-list li a {
+                text-decoration: none;
+                color: white;
+                display: block;
+            }
+
+                .menu-list li a:hover {
+                    text-decoration: underline;
+                    font-weight: bold;
+                }
 </style>
 
 <div class="row">
@@ -41,7 +86,8 @@
                                 <th scope="col">#</th>
                                 <th scope="col">Expéditeur</th>
                                 <th scope="col">Objet - <span class="msg">Message</span></th>
-                                <th scope="col">Date de l'envoi</th>
+                                <th scope="col" class="text-end">Date de l'envoi</th>
+                                <th scope="col"></th>
                             </tr>
                         </thead>
                         <tbody>
@@ -54,7 +100,16 @@
                                     <td>@(++no)</td>
                                     <td>@_context.Users.Where(u => u.Id == msg.Message.Auteur).FirstOrDefault().Email</td>
                                     <td class="truncate">@Html.DisplayFor(modelItem => msg.Message.Sujet) - <span class="msg">@Html.DisplayFor(modelItem => msg.Message.Message)</span></td>
-                                    <td>@Html.DisplayFor(modelItem => msg.Message.DateEnvoi)</td>
+                                    <td class="text-end">@Html.DisplayFor(modelItem => msg.Message.DateEnvoi)</td>
+                                    <td>
+                                        <div class="menu-container">
+                                            <a class="menu-btn" onclick="afficherMenu(event)">@* ☰ *@</a>
+                                            <ul class="menu-list">
+                                                <li><a href="#" onclick="restaurer(event, '@msg.NoMessage')">Restaurer</a></li>
+                                                <li><a href="#" onclick="supprimerDef(event, '@msg.NoMessage')">Supprimer</a></li>
+                                            </ul>
+                                        </div>
+                                    </td>
                                 </tr>
                             }
                         </tbody>
@@ -64,3 +119,33 @@
         </section>
     </div>
 </div>
+
+<script>
+    document.addEventListener('click', function (event) {
+        var menuList = document.querySelectorAll('.menu-list');
+
+        // Vérifier si l'élément cliqué n'est pas à l'intérieur du menu
+        if (!event.target.closest('.menu-container')) {
+            // Masquer tous les menus
+            menuList.forEach(function (menu) {
+                menu.style.display = 'none';
+            });
+        }
+    });
+
+    function afficherMenu(event) {
+        event.stopPropagation();
+        var menuList = event.target.nextElementSibling;
+        menuList.style.display = (menuList.style.display === 'none' || menuList.style.display === '') ? 'block' : 'none';
+    }
+
+    function restaurer(event, noMessage) {
+        event.stopPropagation();
+        window.location.href = '@Url.Action("Restaurer")' + '?idMessage=' + noMessage;
+    }
+
+    function supprimerDef(event, noMessage) {
+        event.stopPropagation();
+        window.location.href = '@Url.Action("supprimerDefinitivement")' + '?idMessage=' + noMessage;
+    }
+</script>
