--- a/Projet Web Commerce/Views/PPGestionnaires/ListeVendeurs.cshtml
+++ b/Projet Web Commerce/Views/PPGestionnaires/ListeVendeurs.cshtml
@@ -32,13 +32,6 @@
                                 document.write('<h4 class="card-title"><u>' + monthName + ' ' + year + '</u></h4>');
                             </script>
                             @{
-                                /*
-                                var groupeParAnnee = Model.VendeursList
-                                .Where(item => item.DateCreation.Month == date.Mois && item.DateCreation.Year == date.Annee)
-                                .OrderBy(item => item.NomAffaires)
-                                .ToList();
-                                */
-
                                 var groupeParAnnee = (from vendeur in Model.VendeursList
                                                       join user in Model.UtilisateurList
                                                       on vendeur.IdUtilisateur equals user.Id
@@ -53,11 +46,34 @@
                                                           Vendeur = vendeur,
                                                           Commande = vc,
                                                           CommandesList = Model.CommandesList.Where(cp => cp.NoVendeur == vendeur.NoVendeur).ToList(),
+                                                          NbProduitsInscrits = Model.ProduitsList.Count(p => p.NoVendeur == vendeur.NoVendeur),
+                                                          EvaluationMoyenne = Model.EvaluationList
+                                                      .Where(e => Model.ProduitsList.Any(p => p.NoVendeur == vendeur.NoVendeur && p.NoProduit == e.NoProduit))
+                                                      .Select(e => (decimal?)e.Cote)
+                                                      .DefaultIfEmpty(null)
+                                                      .Average()
                                                       })
                                 .ToList();
-
-
-
+                               /*
+                                var groupeParAnnee = (from vendeur in Model.VendeursList
+                                                      join user in Model.UtilisateurList
+                                                      on vendeur.IdUtilisateur equals user.Id
+                                                      where user.EmailConfirmed && vendeur.DateCreation.Month == date.Mois && vendeur.DateCreation.Year == date.Annee
+                                                      orderby vendeur.NomAffaires
+                                                      join commande in Model.CommandesList
+                                                      on vendeur.NoVendeur equals commande.NoVendeur into vendeurCommandes
+                                                      from vc in vendeurCommandes.DefaultIfEmpty()
+                                                      orderby vc?.DateCommande
+                                                      select new
+                                                      {
+                                                          Vendeur = vendeur,
+                                                          Commande = vc,
+                                                          CommandesList = Model.CommandesList.Where(cp => cp.NoVendeur == vendeur.NoVendeur).ToList(),
+                                                         
+                                                          
+                                                      })
+                                .ToList();
+                                */
 
                             }
                             <table class="table">
@@ -69,6 +85,7 @@
                                         <th scope="col">Nom d'affaires</th>
                                         <th scope="col">Date de création</th>
                                         <th scope="col">Nb de produits inscrits</th>
+                                        <th scope="col">Cote Moyen</th>
                                         <th scope="col">Date de dernière commande</th>
                                         <th scope="col">Montant total avant taxes </th>
                                         <th scope="col">Supprimer Panier</th>
@@ -97,6 +114,17 @@
                                             <td>@Html.DisplayFor(modelItem => item.Vendeur.NomAffaires)</td>
                                             <td>@Html.DisplayFor(modelItem => item.Vendeur.DateCreation)</td>
                                             <td>@Model.ProduitsList.Count(modelItem => modelItem.NoVendeur == item.Vendeur.NoVendeur)</td>
+                                            <td>
+                                                @if (item.EvaluationMoyenne.HasValue)
+                                                {
+                                                    @(item.EvaluationMoyenne.ToString() + "/5")
+                                                }
+                                                else
+                                                {
+                                                    <p>Aucune évaluation à ce jour</p>
+                                                }
+                                            </td>
+
                                             <td>@Html.DisplayFor(modelItem => item.Commande.DateCommande)</td>
                                             <td>@Html.DisplayFor(modelItem => item.Commande.MontantTotAvantTaxes)</td>
                                             <td>
