--- a/Projet Web Commerce/Areas/Identity/Pages/Account/Manage/ProfilVendeur.cshtml
+++ b/Projet Web Commerce/Areas/Identity/Pages/Account/Manage/ProfilVendeur.cshtml
@@ -25,7 +25,7 @@
     if (nbEval > 0)
     {
         moyenne = moyenne / nb;
-        moyAffiche = Math.Round(moyenne, 2).ToString("F2").TrimEnd('0', ',');
+        moyAffiche = "Votre cote moyenne est " + Math.Round(moyenne, 2).ToString("F2").TrimEnd('0', ',') + " étoiles!";
     }
     else
     {
@@ -34,7 +34,7 @@
 
 }
 
-<h3>Votre cote moyenne est @moyAffiche étoiles!</h3>
+<h3>@moyAffiche</h3>
 <partial name="_StatusMessage" for="StatusMessage" />
 @* <div class="container"> *@
     <form id="profile-form" method="post">
