--- a/Projet Web Commerce/Views/PPGestionnaires/ListeRedevances.cshtml
+++ b/Projet Web Commerce/Views/PPGestionnaires/ListeRedevances.cshtml
@@ -46,21 +46,21 @@
 
 
                             }
-                            <table class="table">
+                            <table class="table" id="redevanceTable">
                                 <thead>
                                     <tr>
                                         <th scope="col">#</th>
                                         <th scope="col">No de vendeur</th>
                                         <th scope="col">
-                                            <a href="#" onclick="sortName('asc')">Information personnelle ▲</a> |
-                                            <a href="#" onclick="sortName('desc')">Information personnelle ▼</a>
+                                            <a href="#" onclick="sortName('asc')">Nom ▲</a> |
+                                            <a href="#" onclick="sortName('desc')">Nom ▼</a>
                                         </th>
                                         <th scope="col">Nom d'affaires</th>
                                         <th scope="col">Date de création</th>
                                         <th scope="col">% Redevance</th>
                                         <th scope="col">
-                                            <a href="#" onclick="sortRedevance('asc')">Total Redevance ▲</a> |
-                                            <a href="#" onclick="sortRedevance('desc')">Total Redevance ▼</a>
+                                            <a href="#" onclick="sortRedevance('asc')">$ Redevance ▲</a> |
+                                            <a href="#" onclick="sortRedevance('desc')">$ Redevance ▼</a>
                                         </th>
                                         <th scope="col"></th>
                                     </tr>
